@@ -2,14 +2,9 @@ package com.experimental.webcrawler.crawler;
 
 import com.experimental.webcrawler.model.PageLink;
 import com.experimental.webcrawler.model.Website;
-import com.experimental.webcrawler.validator.UrlValidator;
+import com.experimental.webcrawler.parser.WebParser;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.jsoup.Jsoup;
-import org.jsoup.UnsupportedMimeTypeException;
-import org.jsoup.nodes.Document;
-import org.jsoup.nodes.Element;
-import org.jsoup.select.Elements;
 
 import java.io.IOException;
 import java.util.Collections;
@@ -22,83 +17,70 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Collectors;
 
 @Slf4j
 public class WebCrawler implements ThreadCompleteListener {
 
     private final Website website;
-    private final Set<String> synchronizedUrls;
+    private final Set<String> scannedPages;
     private final Map<String, CompletableRunnable> threads = new ConcurrentHashMap<>();
     private ExecutorService executorService;
     private Status status;
+    private final WebParser parser = new WebParser();
 
     public WebCrawler(Website website) {
         this.website = website;
-        this.synchronizedUrls = Collections.synchronizedSet(new HashSet<>());
+        this.scannedPages = Collections.synchronizedSet(new HashSet<>());
     }
 
+    public int getRemainedPagesCount() {
+        return this.website.getInternalLinks().size();
+    }
+
+    public int getCrawledPagesCount() {
+        return this.scannedPages.size();
+    }
+
+    public Status getStatus() {
+        return this.status;
+    }
+    
+    public int getBrokenLinksCount() {
+        return this.website.getBrokenPages().size();
+    }
+    
     public void crawl(int threadCount) {
-        scanLinks(this.website.getUrl(), website);
-        List<PageLink> startLinks = website.getInternalLinks().stream().limit(threadCount).toList();
+        parser.parseLinks(this.website.getUrl(), website);
+        List<PageLink> startLinks = website.getInternalLinks().stream()
+                .limit(threadCount)
+                .collect(Collectors.toList());
+        if (startLinks.isEmpty()) {
+            status = Status.ERROR;
+            log.error("Couldn't find amy links on start page.");
+            return;
+        } else if (startLinks.size() < threadCount) {
+            threadCount = startLinks.size();
+        }
         executorService = Executors.newFixedThreadPool(threadCount);
         log.info("Starting crawling website {} with {} threads", website.getDomain(), threadCount);
-        
+
         for (PageLink startLink : startLinks) {
             String id = UUID.randomUUID().toString();
-            CrawlingThread thread = new CrawlingThread(id, startLink.getHref(), this.website, this.synchronizedUrls, this);
+            CompletableRunnable thread = new CrawlingThread(id, startLink.getHref(), 
+                    this.website, 
+                    this.scannedPages, 
+                    this, parser);
             threads.put(id, thread);
             executorService.execute(thread);
         }
         status = Status.RUNNING;
-         
     }
 
     public void shutDown() {
         log.info("Crawling requested to stop.");
         for (Map.Entry<String, CompletableRunnable> entry : threads.entrySet()) {
             entry.getValue().stop();
-        }
-        status = Status.STOPPED;
-        if (executorService != null && !executorService.isShutdown()) {
-            executorService.shutdown();
-        }
-        threads.clear();
-    }
-
-    public int getFoundPagesCount() {
-        return this.website.getInternalLinks().size();
-    }
-
-    public int getCrawledPagesCount() {
-        return this.synchronizedUrls.size();
-    }
-
-    public Status getStatus() {
-        return this.status;
-    }
-
-    public static void scanLinks(String url, Website website) {
-        try {
-            int statusCode = UrlValidator.getStatusCode(url);
-            if (statusCode == 200) {
-                Document doc = Jsoup.connect(url).get();
-                Elements pages = doc.select("a[href]");
-                for (Element page : pages) {
-                    String href = page.attr("href");
-                    String text = page.text();
-                    PageLink pageLink = new PageLink(href, text);
-                    if (href.startsWith(website.getDomain())) {
-                        website.getInternalLinks().add(pageLink);
-                    } else {
-                        website.getExternalLinks().add(pageLink);
-                    }
-                }
-            } else {
-                log.warn("Url {} does not reply. Status code is: {}", url, statusCode);
-            }
-        } catch (UnsupportedMimeTypeException ignored) {
-        } catch (IOException e) {
-            log.warn("Exception while trying to scan page {}.", url, e);
         }
     }
 
@@ -120,16 +102,17 @@ public class WebCrawler implements ThreadCompleteListener {
         private final String id;
         private final String startUrl;
         private final Website website;
-        private final Set<String> synchronizedUrls;
+        private final Set<String> scannedPages;
         private final AtomicBoolean isRequestedToStop = new AtomicBoolean();
         private final ThreadCompleteListener listener;
+        private final WebParser parser;
 
 
         public void scan(String url) throws IOException {
-            if (!synchronizedUrls.contains(url)) {
-                synchronizedUrls.add(url);
+            if (!scannedPages.contains(url)) {
+                scannedPages.add(url);
                 log.info("Scanning internal page {}", url);
-                WebCrawler.scanLinks(url, website);
+                parser.parseLinks(url, website);
             }
         }
 
